objects/Clienteling_Template__c.object
<CustomObject>
    <label>Clienteling Template</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clienteling Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EMAIL</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Market</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>STATUT__c</fullName>
        <label>STATUT</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TO VALIDATE</fullName>
                </value>
                <value>
                    <fullName>VALID</fullName>
                </value>
                <value>
                    <fullName>TO DELETE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>Date de fin de validité du Classic Email Template</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Language</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>Date de début de validité du Classic Email Template</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ID_Email_Template__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>ID Email Template</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Auto_Number_Generator__c</fullName>
        <label>Auto Number Generator</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Body_of_Email_Template__c</fullName>
        <label>Body</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Name_of_Email_Template__c</fullName>
        <label>Name of Email Template</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Folder_of_Email_Template__c</fullName>
        <label>Folder of Email Template</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Subject_of_Email_Template__c</fullName>
        <label>Subject</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_of_Email_Template__c</fullName>
        <label>Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Developer_Name_of_Email_Template__c</fullName>
        <formula>SUBSTITUTE(Name,&quot; &quot;,&quot;_&quot;)&amp;SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(TEXT(TODAY()),&quot; &quot;,&quot;&quot;),&quot;-&quot;,&quot;&quot;),&quot;:&quot;,&quot;&quot;)&amp;  Auto_Number_Generator__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Developer Name of Email Template</label>
        <type>Text</type>
    </fields>
</CustomObject>